tests/org.eclipse.php.core.tests/workspace/errors/php53/testBracketedNamespace1.pdtt
--TEST--
Test class instantiation error check
--FILE--
<?php
namespace {

    class Test {
    }
    new Test();

}

namespace name {

    class Test {
    }

}
?>
--EXPECT--